# solidshelf

./: meson.build  techstack.md  techstack.yml
app/: meson.build
app/data/: gresource.xml
app/src/: Application.vala  MainWindow.vala  meson.build
app/src/Model/: Statement.vala
app/src/Services/: SqliteDatabaseService.vala
data/: solidshelf.appdata.xml.in
docs/: index.html
lib/: meson.build
lib/Database/Helpers/: QueryBuilder.vala  StatementBuilder.vala
lib/Database/Interfaces/: DatabaseService.vala  Statement.vala
lib/Enums/: ProgressType.vala
lib/Model/: Book.vala
lib/Structs/: Progress.vala
po/: POTFILES  com.github.colinkiama.solidshelf.pot
src/: Application.vala  MainWindow.vala
src/Widgets/: HeaderBar.vala
task/: install  package  run  run-package  update-translations
template/: README.md  com.github.ORG.APP.yml  meson.build
template/.github/workflows/: main.yml
template/data/: APP.desktop.in  gschema.xml
template/site/: README.md  com.github.ORG.APP.flatpakref
template/task/: build  preview-in-appcenter  publish  take-screenshots
tests/: UnitTests.vala  meson.build
